# Course-Recommender

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  results.md  run.sh  test.sh
bfs/: CMakeLists.txt  Makefile  cmake_install.cmake  test-bfs
bfs/include/: BFS.h
bfs/src/: BFS.cpp
bfs/tests/: tests.cpp
data/: CMakeLists.txt  Makefile  cmake_install.cmake  main-data  main.cpp  test-data  uiuc-gpa-dataset-2021sp.csv
data/include/: data.h  node.h
data/src/: data.cpp  node.cpp
data/tests/: test.cpp
dijkstra/: CMakeLists.txt  Makefile  cmake_install.cmake  test-dijkstra
dijkstra/include/: dijkstra.h
dijkstra/src/: dijkstra.cpp
dijkstra/tests/: tests.cpp
graph/: Makefile  cmake_install.cmake  main-graph  main.cpp  test-graph
graph/include/: graph.h  pagerank.h  sparse_matrix.h
graph/src/: graph.cpp
graph/tests/: tests.cpp
node/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test-node
node/include/: node.h
node/src/: node.cpp
node/tests/: tests.cpp
pagerank/: CMakeLists.txt  Makefile  cmake_install.cmake  main-pagerank  test-pagerank
pagerank/include/: pagerank.h
pagerank/src/: pagerank.cpp
pagerank/tests/: tests.cpp
src/: CMakeLists.txt  util.cpp  util.h
tests/: testgraph.cpp
